--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,15 @@ h1 {
     border-style:groove;
 }
 
+img {
+    width: 500px;
+    height: 300px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    object-fit: cover;
+}
+
 .soba{
 
 }
